# auc-hackathon-feb26-helper

./: .gitignore  README.md  main.py  pyproject.toml
autogen/: autogen_exampl.ipynb  autogen_example.ipynb
crewai/calculator/: README.md  pyproject.toml  report.md
crewai/calculator_example/: README.md  pyproject.toml
crewai/calculator_example/src/calculator_example/: crew.py  main.py
crewai/calculator_example/src/calculator_example/config/: agents.yaml  tasks.yaml
crewai/calculator_example/src/calculator_example/tools/: custom_tool.py
gradio/: dashboard.py
langgraph/: langgraph.ipynb
openai_agents_sdk/: openai_agents_sdk.ipynb
streamlit/: dashboard.py
