[project]
name = "auc-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen>=0.10.5",
    "autogen-agentchat>=0.7.5",
    "autogen-ext>=0.7.5",
    "gradio>=6.5.0",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "openai-agents>=0.6.9",
    "pytz>=2025.2",
]
