[project]
name = "calculator_example"
version = "0.1.0"
description = "calculator_example using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
calculator_example = "calculator_example.main:run"
run_crew = "calculator_example.main:run"
train = "calculator_example.main:train"
replay = "calculator_example.main:replay"
test = "calculator_example.main:test"
run_with_trigger = "calculator_example.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
